implement rough synchronization of video and danmuku

--- a/index.html
+++ b/index.html
@@ -36,6 +36,14 @@
             src="https://1251316161.vod2.myqcloud.com/007a649dvodcq1251316161/7d5383555285890808309438826/iFi2r4Qjz8oA.mp4">
     </div>
 
+    <div class="prompt" id="status">current timestamp: <span id="video-status"></span>&nbsp;&nbsp;||&nbsp;&nbsp;latest danmuku timestamp: <span id="danmuku-status"></span>
+        &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;danmuku offset = <span id="offset"></span>
+        <input type="button" id="backward" value="-">
+        <input type="button" id="forward" value="+">
+    </div>
+
+    
+
     <div class="prompt" id="video-input">
         <p>=================================================</p>
         Upload video here: 
