add removal mechanism on danmuku

--- a/index.html
+++ b/index.html
@@ -37,9 +37,8 @@
     </div>
 
     <div class="prompt" id="status">current timestamp: <span id="video-status"></span>&nbsp;&nbsp;||&nbsp;&nbsp;latest danmuku timestamp: <span id="danmuku-status"></span>
-        &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;danmuku offset = <span id="offset"></span>
-        <input type="button" id="backward" value="-">
-        <input type="button" id="forward" value="+">
+        <br/> danmuku offset = <span id="offset"></span>
+        <input type="range" id="offset-slider" min=-600 max=600 step=1>
     </div>
 
     
