implement resizable player

--- a/index.html
+++ b/index.html
@@ -40,9 +40,9 @@
         <br/>Show Danmuku?&nbsp;
         <input type="checkbox" id="danmuku-switch" checked>
         
-        <!-- <br/>Video Size:&nbsp;
+        <br/>Video Size:&nbsp;
         <input type="range" id="video-size-slider" min="50" max="150" step="1" id="mySlider" value="100"/>
-        &nbsp;<span id="video-size"></span>% -->
+        &nbsp;<span id="video-size"></span>%
 
         <br/> Danmuku Offset:&nbsp;
         <input type="range" id="offset-slider" min=-600 max=600 step=1>
