--- a/index.html
+++ b/index.html
@@ -39,6 +39,10 @@
     <div class="prompt" id="status">Current Timestamp: <span id="video-status"></span>&nbsp;&nbsp;||&nbsp;&nbsp;Latest Danmuku Timestamp: <span id="danmuku-status"></span>
         <br/>Show Danmuku?&nbsp;
         <input type="checkbox" id="danmuku-switch" checked>
+
+        <br/>Danmuku Speed:&nbsp;
+        <input type="range" id="danmuku-speed-slider" min="25" max="200" step="10" id="mySlider" value="100"/>
+        &nbsp;<span id="danmuku-speed"></span>%
         
         <br/>Video Size:&nbsp;
         <input type="range" id="video-size-slider" min="50" max="150" step="1" id="mySlider" value="100"/>
