add a few keyboard shortcuts

--- a/index.html
+++ b/index.html
@@ -41,12 +41,12 @@
         <input type="checkbox" id="danmuku-switch" checked>
 
         <br/>Danmuku Speed:&nbsp;
-        <input type="range" id="danmuku-speed-slider" min="25" max="200" step="25" id="mySlider" value="100"/>
+        <input type="range" id="danmuku-speed-slider" min="25" max="200" step="25" value="100"/>
         &nbsp;<span id="danmuku-speed"></span>%
         
         <br/>Video Size:&nbsp;
-        <input type="range" id="video-size-slider" min="50" max="150" step="1" id="mySlider" value="100"/>
-        &nbsp;<span id="video-size"></span>%
+        <input type="range" id="video-size-slider" min="50" max="150" step="1" value="100"/>
+        &nbsp;<span id="video-size"></span>%&nbsp&nbsp&nbsp(ctrl + ↑/↓)
 
         <br/> Danmuku Offset:&nbsp;
         <input type="range" id="offset-slider" min=-600 max=600 step=1>
@@ -62,7 +62,8 @@
     <div class="prompt" id="video-input">
         <p>=================================================</p>
         Upload video here: 
-        <input type="file" id="videoInput"> OR Enter url here:
+        <input type="file" id="videoInput"> 
+        OR Enter url here:
         <input type="text" id="videoUrlInput" placeholder="Enter url">
         <input type="submit" id="videoUrlInputSubmit">
     </div>
@@ -70,9 +71,10 @@
     <div class="prompt" id="danmuku-input">
         <p>=================================================</p>
         Upload danmuku xml file here: 
-        <input type="file" id="danmukuInput"> OR Enter url here:
+        <input type="file" id="danmukuInput"> 
+        <!-- OR Enter url here:
         <input type="text" id="danmukuUrlInput" placeholder="Enter url">
-        <input type="submit" id="danmukuUrlInputSubmit">
+        <input type="submit" id="danmukuUrlInputSubmit"> -->
     </div>
 
     
