--- a/index.html
+++ b/index.html
@@ -48,6 +48,10 @@
         <input type="range" id="video-size-slider" min="50" max="150" step="1" value="100"/>
         &nbsp;<span id="video-size"></span>%&nbsp&nbsp&nbsp(ctrl + ↑/↓)
 
+        <br/> Danmuku Opacity:&nbsp;
+        <input type="range" id="danmuku-opacity-slider" min=0 max=1 step=0.1 value=0.7>
+        &nbsp;<span id="danmuku-opacity"></span>
+
         <br/> Danmuku Offset:&nbsp;
         <input type="range" id="offset-slider" min=-600 max=600 step=1>
         &nbsp;<span id="offset"></span>
